# blended

./: .gitignore  AUTHORS  BLENDED.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  COPYING  PHILOSOPHY.md  REVIEWME.md  SAVINGS.md  UPSTREAM_SYNC.md  WARNINGS.md  grass.md  help.md  platform_emscripten.cmake  wtf.md
.gitea/: pull_request_template.yaml
.github/: README.md  pull_request_template.md
.github/workflows/: build-wasm.yml  build-windows.yml  sync-upstream.yml
archive/: BLENDED.md  CHANGELOG.md  CLAUDE.md  GITHUB_README.md  README.md  TEMPLATE.md  UPSTREAM_SYNC.md  WARNINGS.md  WEBASSEMBLY_ROADMAP.md
build_files/cmake/: macros.cmake  packaging.cmake  warnings_report.cmake
build_files/cmake/config/: blended_release.cmake  blended_wasm.cmake
build_files/cmake/platform/: dependency_targets.cmake  platform_emscripten.cmake
build_files/cmake/platform/emscripten_compat/: CMakeLists.txt  epoxy_shim.c
build_files/cmake/platform/emscripten_compat/epoxy/: egl.h  gl.h
build_files/utils/: parse_warnings.py
build_files/web/: WEBASSEMBLY_ROADMAP.md  blended.css  blended.js  coi-serviceworker.min.js  index.html
doc/doxygen/: Doxyfile
intern/cycles/kernel/: CMakeLists.txt
intern/dualcon/intern/: octree.cpp
intern/ghost/: CMakeLists.txt
intern/ghost/intern/: GHOST_SystemSDL.cc  GHOST_WindowSDL.cc  GHOST_WindowWin32.cc
intern/libmv/libmv/multiview/: euclidean_resection.cc
release/darwin/Blender.app/Contents/: Info.plist
release/datafiles/: license.txt  splash.png24  splash_template.xcf
release/freedesktop/: blended.desktop  blender.desktop
release/freedesktop/snap/: blender-wrapper
release/text/: copyright.txt  readme.html
release/windows/batch/: blended_debug_cycles.cmd  blended_debug_gpu.cmd  blended_debug_gpu_glitchworkaround.cmd  blended_debug_log.cmd  blended_factory_startup.cmd  blended_factory_startup_vulkan.cmd  blended_oculus.cmd  blended_startup_opengl.cmd  blended_startup_vulkan.cmd  blended_system_info.cmd.in
release/windows/icons/: winblended.rc  winblender.rc
release/windows/msix/: AppxManifest.xml.template
scripts/addons_core/pose_library/: operators.py
scripts/addons_core/rigify/utils/: objects.py
scripts/modules/: _bpy_types.py  _rna_manual_reference.py  blended_utils.py
scripts/modules/_bl_i18n_utils/: bl_extract_messages.py  settings.py
scripts/modules/_bpy_internal/platform/: freedesktop.py
scripts/presets/interface_theme/: Blended.xml
scripts/startup/: blended_defaults.py  blended_launcher.py  blended_rig_compat.py  blended_update_check.py
scripts/startup/bl_operators/: assets.py  object_quick_effects.py  wm.py
scripts/startup/bl_ui/: __init__.py  node_add_menu_shader.py  properties_collection.py  properties_constraint.py  properties_data_armature.py  properties_data_bone.py  properties_data_camera.py  properties_data_curve.py  properties_data_curves.py  properties_data_empty.py  properties_data_grease_pencil.py  properties_data_lattice.py  properties_data_light.py  properties_data_lightprobe.py  properties_data_mesh.py  properties_data_metaball.py  properties_data_modifier.py  properties_data_pointcloud.py  properties_data_shaderfx.py  properties_data_speaker.py  properties_data_volume.py  properties_freestyle.py  properties_material.py  properties_object.py  properties_output.py  properties_paint_common.py  properties_particle.py  properties_physics_common.py  properties_render.py  properties_scene.py  properties_texture.py  properties_view_layer.py  properties_workspace.py  properties_world.py  space_dopesheet.py  space_image.py  space_node.py  space_outliner.py  space_sequencer.py  space_topbar.py  (+4 more)
source/blender/: CMakeLists.txt
source/blender/animrig/intern/: animdata.cc
source/blender/asset_system/intern/: asset_library.cc  asset_library_service.cc
source/blender/blendthumb/: CMakeLists.txt
source/blender/blenfont/intern/: blf_font.cc  blf_glyph.cc
source/blender/blenkernel/: BKE_blender_version.h  BKE_brush.hh  BKE_cachefile.hh  BKE_context.hh  BKE_idtype.hh  BKE_lattice.hh  BKE_lightprobe.h  BKE_main.hh  BKE_mask.hh  BKE_mball.hh  BKE_nla.hh  BKE_paint.hh  BKE_scene_runtime.hh  BKE_screen.hh  BKE_undo_system.hh  BKE_vfont.hh  CMakeLists.txt
source/blender/blenkernel/intern/: anim_data_bmain_utils.cc  anim_sys.cc  attribute.cc  (+56 more)
source/blender/blenloader/: BLO_readfile.hh
source/blender/blenloader_core/: BLO_core_blend_header.hh
source/blender/blentranslation/: BLT_translation.hh
source/blender/blentranslation/msgfmt/: CMakeLists.txt
source/blender/datatoc/: CMakeLists.txt
source/blender/depsgraph/: DEG_depsgraph_build.hh
source/blender/draw/: CMakeLists.txt
source/blender/editors/: CMakeLists.txt
source/blender/gpu/shader_tool/: CMakeLists.txt
source/blender/imbuf/: CMakeLists.txt
source/blender/makesdna/: DNA_ID.h  DNA_ID_enums.h  DNA_action_types.h  DNA_brush_enums.h  DNA_brush_types.h  DNA_cachefile_types.h  DNA_constraint_types.h  DNA_curve_types.h  DNA_gpencil_legacy_types.h  DNA_lattice_types.h  DNA_light_types.h  DNA_lightprobe_types.h  DNA_linestyle_types.h  DNA_mask_types.h  DNA_meta_types.h  DNA_modifier_types.h  DNA_node_types.h  DNA_object_types.h  DNA_particle_types.h  DNA_scene_types.h  DNA_screen_types.h  DNA_space_enums.h  DNA_space_types.h  DNA_texture_types.h  DNA_userdef_enums.h  DNA_userdef_types.h  DNA_vfont_types.h  DNA_windowmanager_types.h  DNA_workspace_types.h
source/blender/makesrna/: RNA_enum_items.hh
source/blender/windowmanager/: CMakeLists.txt  WM_types.hh
source/creator/: CMakeLists.txt  blender_launcher_win32.c
tests/python/: CMakeLists.txt
tests/python/ui_simulate/: test_quick_effects.py
tools/check_blender_release/: check_static_binaries.py
(+295 files in other folders)
